--- a/results/report.html
+++ b/results/report.html
@@ -1881,22 +1881,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11491],[[4,5,6,0,[],[1,29,11460],[[7,8,9,0,[],[1,31,11457],[],[[10,0,0,[],[1,91,11394],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,24316],[[4,5,6,0,[],[1,26,24289],[[7,8,9,0,[],[1,28,24286],[],[[10,0,0,[],[1,106,24206],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*TC1","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TC1.robot","*../TestCases/TC1.robot","*Open HomePage"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*InputBox","*/Users/amit/IdeaProjects/PythonProject1/TestCases/InputBox.robot","*../TestCases/InputBox.robot","*Verify InputBox"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.TC1","name":"TC1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:24","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:24","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.InputBox","name":"InputBox","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765800338078;
+window.output["baseMillis"] = 1765801747375;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11495;
+window.output["generated"] = 24318;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
