--- a/results/report.html
+++ b/results/report.html
@@ -1881,22 +1881,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,24316],[[4,5,6,0,[],[1,26,24289],[[7,8,9,0,[],[1,28,24286],[],[[10,0,0,[],[1,106,24206],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,39501],[[4,5,6,0,[],[1,25,39473],[[7,8,9,0,[],[1,26,39468],[],[[10,0,0,[],[1,105,39385],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*InputBox","*/Users/amit/IdeaProjects/PythonProject1/TestCases/InputBox.robot","*../TestCases/InputBox.robot","*Verify InputBox"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*RadioButtonAndCheckBoxes","*/Users/amit/IdeaProjects/PythonProject1/TestCases/RadioButtonAndCheckBoxes.robot","*../TestCases/RadioButtonAndCheckBoxes.robot","*Testing RadioButtons and CheckBoxes"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:24","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:24","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.InputBox","name":"InputBox","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:39","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:40","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:39","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:39","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.RadioButtonAndCheckBoxes","name":"RadioButtonAndCheckBoxes","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765801747375;
+window.output["baseMillis"] = 1765803935700;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24318;
+window.output["generated"] = 39507;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
