--- a/results/report.html
+++ b/results/report.html
@@ -1881,22 +1881,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,46198],[[4,5,6,0,[],[1,25,46171],[[7,8,9,0,[],[1,26,46167],[],[[10,0,0,[],[1,84,46104],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,6091],[[4,5,6,0,[],[1,25,6064],[[7,8,9,0,[],[1,27,6062],[],[[10,0,0,[],[1,108,5979],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*DropDowns","*/Users/amit/IdeaProjects/PythonProject1/TestCases/DropDowns.robot","*../TestCases/DropDowns.robot","*Validating DropDowns And Lists"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*ImplicitWaitTest","*/Users/amit/IdeaProjects/PythonProject1/TestCases/ImplicitWaitTest.robot","*../TestCases/ImplicitWaitTest.robot","*Registration Test and verify the waits"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:46","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:46","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:46","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:46","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.DropDowns","name":"DropDowns","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:06","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:06","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.ImplicitWaitTest","name":"ImplicitWaitTest","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765805163806;
+window.output["baseMillis"] = 1765865789560;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 46204;
+window.output["generated"] = 6093;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
