--- a/results/report.html
+++ b/results/report.html
@@ -1881,22 +1881,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,17502],[[4,5,6,0,[],[1,23,17478],[[7,8,9,0,[],[1,24,17475],[],[[10,0,0,[],[1,101,17397],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10171],[[4,5,6,0,[],[1,22,10148],[[7,8,9,0,[],[1,23,10146],[],[[10,0,0,[],[1,81,10087],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*FramesTest","*/Users/amit/IdeaProjects/PythonProject1/TestCases/FramesTest.robot","*../TestCases/FramesTest.robot","*Registration Test and verify the waits"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*NavigationKeywords","*/Users/amit/IdeaProjects/PythonProject1/TestCases/NavigationKeywords.robot","*../TestCases/NavigationKeywords.robot","*Navigation Commands"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:17","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.FramesTest","name":"FramesTest","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.NavigationKeywords","name":"NavigationKeywords","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765887903623;
+window.output["baseMillis"] = 1765903388779;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17505;
+window.output["generated"] = 10174;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
