--- a/log.html
+++ b/log.html
@@ -2073,31 +2073,31 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16700],[],[[4,0,0,[],[1,99,16601],[[0,5,6,0,7,8,0,0,[1,100,10532],[[100,2,9]]],[0,10,6,0,11,0,0,0,[1,10632,314],[]],[0,12,6,0,13,14,0,0,[1,10947,9],[[10956,2,15]]],[0,16,6,0,17,18,0,0,[1,10956,100],[[10957,2,19]]],[0,16,6,0,17,20,0,0,[1,11057,40],[[11057,2,21]]],[0,16,6,0,17,22,0,0,[1,11097,43],[[11097,2,23]]],[0,16,6,0,17,24,0,0,[1,11141,38],[[11141,2,25]]],[0,26,6,0,27,28,0,0,[1,11179,35],[[11179,2,29]]],[0,26,6,0,27,30,0,0,[1,11214,37],[[11214,2,31]]],[0,26,6,0,27,32,0,0,[1,11251,31],[[11251,2,33]]],[0,34,6,0,35,36,0,0,[1,11281,5327],[[11282,2,37]]],[0,38,6,0,39,0,0,0,[1,16608,92],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15],[],[[4,0,0,[5],[1,14,1],[[0,6,7,0,8,9,0,0,[1,14,0],[]],[0,6,7,0,8,10,0,0,[1,14,0],[]]]],[11,0,0,[5],[1,15,0],[[0,6,7,0,8,12,0,0,[1,15,0],[]],[0,6,7,0,8,13,0,0,[1,15,0],[]]]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC1","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TC1.robot","*TestCases/TC1.robot","*Open HomePage","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}    ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://testautomationpractice.blogspot.com/\">https://testautomationpractice.blogspot.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*${HOME_PAGE_TITLE}","*Page title is 'Automation Testing Practice'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://input[@id='name\">xpath://input[@id='name\x3c/a>']    Amit Chandran","*Typing text 'Amit Chandran' into text field '<a href=\"xpath://input[@id='name\">xpath://input[@id='name\x3c/a>']'.","*<a href=\"xpath://input[@id='email\">xpath://input[@id='email\x3c/a>']    amitvchandrantest1@gmail.com","*Typing text 'amitvchandrantest1@gmail.com' into text field '<a href=\"xpath://input[@id='email\">xpath://input[@id='email\x3c/a>']'.","*<a href=\"xpath://input[@id='phone\">xpath://input[@id='phone\x3c/a>']    6755667877","*Typing text '6755667877' into text field '<a href=\"xpath://input[@id='phone\">xpath://input[@id='phone\x3c/a>']'.","eNqzSVTIKEpNs1WqKEgsybDS1y9JrShJLEpNjHbITLFVh/GU7PDL2+gn2qnHKgBBSEZmsQIQlWSkKoBkFUDSAC9gI00=","*Typing text 'This is the text area' into text field '<a href=\"xpath://textarea[@id='textarea\">xpath://textarea[@id='textarea\x3c/a>']'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://input[@id='male\">xpath://input[@id='male\x3c/a>']","*Clicking element '<a href=\"xpath://input[@id='male\">xpath://input[@id='male\x3c/a>']'.","*<a href=\"xpath://input[@id='sunday\">xpath://input[@id='sunday\x3c/a>']","*Clicking element '<a href=\"xpath://input[@id='sunday\">xpath://input[@id='sunday\x3c/a>']'.","*<a href=\"xpath://input[@id='tuesday\">xpath://input[@id='tuesday\x3c/a>']","*Clicking element '<a href=\"xpath://input[@id='tuesday\">xpath://input[@id='tuesday\x3c/a>']'.","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://a[text()='Udemy\">xpath://a[text()='Udemy\x3c/a> Courses']","*Clicking link '<a href=\"xpath://a[text()='Udemy\">xpath://a[text()='Udemy\x3c/a> Courses']'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TaggingRobot","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TaggingRobot.robot","*TestCases/TaggingRobot.robot","*TC2 Login Test","*sanity","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is user login test","*user login test is over","*TC4 Logout Test","*This is user Logout test","*user Logout test is over"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"TC1","name":"TC1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"sanity","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"TaggingRobot","name":"TaggingRobot","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765796175106;
+window.output["baseMillis"] = 1766559521037;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16703;
+window.output["generated"] = 16;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
