--- a/report.html
+++ b/report.html
@@ -1881,22 +1881,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16700],[],[[4,0,0,[],[1,99,16601],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15],[],[[4,0,0,[5],[1,14,1],[]],[6,0,0,[5],[1,15,0],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC1","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TC1.robot","*TestCases/TC1.robot","*Open HomePage"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TaggingRobot","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TaggingRobot.robot","*TestCases/TaggingRobot.robot","*TC2 Login Test","*sanity","*TC4 Logout Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"TC1","name":"TC1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"sanity","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"TaggingRobot","name":"TaggingRobot","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1765796175106;
+window.output["baseMillis"] = 1766559521037;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16703;
+window.output["generated"] = 16;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
