--- a/results/log.html
+++ b/results/log.html
@@ -2073,31 +2073,31 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,29270],[[4,5,6,0,[],[1,21,29248],[[7,8,9,0,[],[1,22,29246],[],[[10,0,0,[],[1,81,29186],[[0,11,12,0,0,13,14,0,[1,81,19053],[[0,15,16,0,17,18,0,0,[1,82,1835],[[82,2,19]]],[0,20,16,0,21,0,0,0,[1,1919,17207],[]],[0,22,16,0,23,0,24,0,[1,19126,6],[[19132,2,25]]],[8,0,0,0,0,24,0,0,[1,19133,1],[]],[19134,2,26]]],[0,27,28,0,29,14,0,0,[1,19134,1],[]],[0,30,16,0,31,32,0,0,[1,19136,8],[[19136,2,33]]],[0,34,28,0,35,36,0,0,[1,19144,5003],[[24146,2,37]]],[0,30,16,0,31,38,0,0,[1,24147,11],[[24148,2,39]]],[0,34,28,0,35,36,0,0,[1,24158,5003],[[29160,2,37]]],[0,40,16,0,41,0,0,0,[1,29162,105],[]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,27],[[4,5,6,0,[],[1,21,5],[[7,8,9,0,[],[1,22,3],[],[[10,0,0,[],[1,23,2],[[0,11,12,0,13,14,0,0,[1,24,0],[]],[0,11,12,0,13,15,0,0,[1,24,0],[]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*ScrollingPage","*/Users/amit/IdeaProjects/PythonProject1/TestCases/ScrollingPage.robot","*../TestCases/ScrollingPage.robot","*Scrolling Page Validation","*Launch Browse Maximize and Return Title","*Resources","*${URL}    ${BROWSER}","*${PageTitle}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${appUrl}    ${appBrowser}","eNqly7ENhDAMAMBVLJpUIT3KswIzBHAwUhIjx8jrw1c/wLcn3XJhO9sBq7B1FHAbCVd0oAxr6gi3FHAxAQnmz0CqV59CMLNx47upnNg9ZyX0xlL2V2vIJR1f9T8mrWWY/+oxpNmND0rkQB8=","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Get Title","*<p>Returns the title of the current page.\x3c/p>","*${title}","*${title} = Country flags of the world with images and names","*${PageTitle} = Country flags of the world with images and names","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Execute Javascript","*<p>Executes the given JavaScript code with possible arguments.\x3c/p>","*window.scrollTo(0,document.body.scrollHeight)","*Executing JavaScript:\nwindow.scrollTo(0,document.body.scrollHeight)\nWithout any arguments.","*Sleep","*<p>Pauses the test executed for the given time.\x3c/p>","*5","*Slept 5 seconds.","*window.scrollTo(0,-document.body.scrollHeight)","*Executing JavaScript:\nwindow.scrollTo(0,-document.body.scrollHeight)\nWithout any arguments.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PythonProject1","*/Users/amit/IdeaProjects/PythonProject1","*..","*TestCases","*/Users/amit/IdeaProjects/PythonProject1/TestCases","*../TestCases","*TaggingRobot","*/Users/amit/IdeaProjects/PythonProject1/TestCases/TaggingRobot.robot","*../TestCases/TaggingRobot.robot","*TC2 Login Test","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*This is user login test","*user login test is over"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:29","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:29","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.ScrollingPage","name":"ScrollingPage","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"PythonProject1","name":"PythonProject1","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"PythonProject1.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1","label":"PythonProject1.TestCases.TaggingRobot","name":"TaggingRobot","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1766063752161;
+window.output["baseMillis"] = 1766559120353;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29272;
+window.output["generated"] = 28;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
